[tool.poetry]
name = "airbnb-clone-backend"
version = "0.1.0"
description = ""
authors = ["니꼬 <nico@nomadcoders.co>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.1"
pillow = "^10.3.0"
djangorestframework = "^3.15.2"
pyjwt = "^2.8.0"
django-environ = "^0.11.2"


[tool.poetry.dev-dependencies]
django-seed = "^0.3.1"
psycopg2 = "^2.9.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
